--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test</title>
+  <title>Sajt</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Oprem</h1>
+  <header>
+    <h1>Oprem</h1>
+    <img src="./IMG_20190217_202009.jpg" alt="">
+  </header> 
 </body>
 </html>
